# adb-studio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  API.md  ARCHITECTURE.md  Audit.md  Build.py  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONNECTION_WIZARD.md  CONTRIBUTING.md  DEPENDENCY_REPORT.md  DEVICE_DETECTION.md  DEVICE_HEALTH_SCORE.md  Decision.md  GOVERNANCE.md  Handoff.md  MAINTAINERS.md  OEM_GUIDES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  Review.md  SBOM.md  SECURITY.md  SECURITY_REVIEW.md  SMART_DIAGNOSTICS.md  SUPPORT.md  SUPPORTED_PLATFORMS.md  THIRD_PARTY_LICENSES.md  THREAT_MODEL.md  USB_RECOVERY.md  Validation.md  WIRELESS_SETUP.md  build.py  build_config.py  setup.iss  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: _windows.yml  artifact-sign.yml  artifacts.yml  benchmark.yml  build.yml  codeql.yml  dependency-audit.yml  documentation.yml  format.yml  license-audit.yml  lint.yml  nightly.yml  package.yml  publish.yml  release-validation.yml  release.yml  security.yml  test.yml
apps/studio/: CMakeLists.txt
apps/studio/qml/: Main.qml
apps/studio/qml/components/: ConnectionWizard.qml  DeviceCard.qml  InfoCard.qml  LoadingView.qml  PrimaryButton.qml  StatusBadge.qml
apps/studio/qml/pages/: DashboardPage.qml  MirrorPage.qml  WorkspaceModulePage.qml
apps/studio/src/: main.cpp
assets/: preview.html
benchmarks/: baseline.json
cmake/: Architecture.cmake  ProjectOptions.cmake  version.hpp.in  version.rc.in
config/: first-party-binaries.txt
core/: CMakeLists.txt
core/diagnostics/include/adb_studio/diagnostics/: device_diagnostics.hpp  system_device_probe.hpp
core/diagnostics/src/: device_diagnostics.cpp  system_device_probe.cpp
core/presentation/include/adb_studio/presentation/: device_dashboard_view_model.hpp  language_service.hpp  mirror_view_model.hpp  theme_service.hpp  workspace_view_model.hpp
core/presentation/src/: device_dashboard_view_model.cpp  language_service.cpp  mirror_view_model.cpp  theme_service.cpp  workspace_view_model.cpp
core/services/include/adb_studio/services/: mirror_service.hpp
core/services/src/: mirror_service.cpp
docs/architecture/: README.md  module-dependencies.json
docs/architecture/adr/: 0001-foundation-and-ui.md  0002-build-signing-release-automation.md  0003-evidence-based-device-onboarding.md  0004-sidebar-workspace-registry.md  0005-real-mirroring-localization-and-visible-module-policy.md
docs/github/: REPOSITORY_SETTINGS.md  SIGNING.md
docs/marketing/: README.md
docs/modules/: build-release.md  presentation.md  screen-mirroring.md  sidebar-workspaces.md
resources/: res.crty
scripts/: audit_supply_chain.py  generate_sbom.py  generate_windows_icon.py  install_iwyu.ps1  run_quality_gate.py  update_resources.py  update_turkish_translations.py  update_version.py  validate_architecture.py  validate_diagnostics_docs.py  validate_no_placeholders.py  validate_qml_policy.py  validate_resources.py  validate_translations.py  validate_ui_connections.py  validate_version.py
tests/: CMakeLists.txt
tests/integration/: mirror_service_integration_test.cpp  process_failure_fixture.cpp  system_device_probe_integration_test.cpp
tests/python/: test_build.py
tests/unit/: device_dashboard_view_model_test.cpp  device_diagnostics_test.cpp  theme_service_test.cpp  workspace_view_model_test.cpp
translations/: adb_studio_tr.qm  adb_studio_tr.ts
